test/tests/compiler/18_structures/invalid_parse/struct_decl_extra_semicolon.plx
type struc s (,  # extra semicolon that doesn't follow declaration is a syntax error
    a: i32)
